# diabetes-prediction-ml

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: mkdocs.yml
docs/docs/: index.md
dpred/: app.py  config.py
dpred/scripts/: train_model.py
frontend/: streamlit_app.py
models/: diabetes_model.pkl
notebooks/: diabetes_prediction.ipynb
tests/: test_app.py
