[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dpred"
version = "0.0.1"
description = "A Simple FastAPI Application To Predict Diabetes."
authors = [
  { name = "Sudeep" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["dpred"]
force_sort_within_sections = true
